Created add book button and grid layout for books when they're added.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,32 @@
     <title>Library</title>
   </head>
   <body>
-    <div class="page-container">
-      <div class="header">
-        <div class="title-section">
-          <h1 id="header-title">Library</h1>
-        </div>
-        <div class="login-section">
-          <button id="login">Login</button>
+    <div class="header">
+      <div class="title-section">
+        <h1 id="header-title">Library</h1>
+      </div>
+      <div class="login-section">
+        <button class="btn login">Login</button>
+      </div>
+    </div>
+
+    <div class="main-body">
+      <button class="btn add-book">Add Book +</button>
+      <div class="books-container">
+        <div class="book">
+          <div class="author">
+            <p>Thor, God Of Thunder</p>
+          </div>
+          <div class="title">
+            <p>How to write Javascript</p>
+          </div>
+          <div class="pages">
+            <p>10</p>
+          </div>
+
+          <button class="btn has-read">Yes</button>
         </div>
       </div>
-
-      <div class="main-body"></div>
     </div>
   </body>
 </html>
