--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="main-body">
-      <button class="btn add-book">Add Book +</button>
+      <button class="btn add-book" id="add-book-btn">Add Book +</button>
       <div class="books-container">
         <div class="book">
           <div class="author">
