Added button with functionality to remove a book from the library.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <p>How to write Javascript</p>
           <p>10</p>
           <button class="btn has-read">Yes</button>
+          <button class="btn remove-btn">Remove</button>
         </div>
       </div>
     </div>
