--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
       <button class="btn add-book" id="add-book-btn">Add Book +</button>
       <div class="books-container">
         <div class="book">
-          <p>Thor, God Of Thunder</p>
+          <p id="book-author">Thor, God Of Thunder</p>
           <p>How to write Javascript</p>
           <p>10</p>
-          <button class="btn has-read">Yes</button>
+          <button class="btn green-btn">Yes</button>
           <button class="btn remove-btn">Remove</button>
         </div>
       </div>
     </div>
+
+    <div class="dark-overlay"></div>
 
     <div class="form-container">
       <form id="add-new-book-form">
@@ -39,9 +41,9 @@
         
         <div class="has-read-book">
           <label for="is-read">Have you read it?</label>
-          <input type="checkbox" id="is-read" required>
+          <input type="checkbox" id="is-read">
         </div>
-        <button type="submit" class="btn btn-green">Submit</button>
+        <button type="submit" class="btn green-btn">Submit</button>
       </form>
     </div>
   </body>
