--- a/index.html
+++ b/index.html
@@ -19,15 +19,7 @@
 
     <div class="main-body">
       <button class="btn add-book" id="add-book-btn">Add Book +</button>
-      <div class="books-container">
-        <div class="book">
-          <p id="book-author">Thor, God Of Thunder</p>
-          <p>How to write Javascript</p>
-          <p>10</p>
-          <button class="btn green-btn">Yes</button>
-          <button class="btn remove-btn">Remove</button>
-        </div>
-      </div>
+      <div class="books-container"></div>
     </div>
 
     <div class="dark-overlay"></div>
